# rsdiff

./: .gitignore  404.html  CITATION.cff  CLAUDE.md  HUGGINGFACE.md  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/workflows/: docs.yml
citation/: index.html
configs/: rsdiff1.5.yaml  rsdiff1.yaml  rsicd_text_128.yaml
ddpm/: README.md  REPRODUCE.md  requirements_dgx.txt  sample_grid.py
ddpm/models/: Imagen_text_joint_pytorch.py  Imagen_text_pytorch.py  Imagen_text_sr_pytorch.py
ddpm/scripts/: lunch_training.sh  lunch_training_sr.sh  run_evaluation.sh  run_joint.sh  run_smoke.sh  run_sr.sh  run_training_local.sh  run_training_mac.sh  sample_grid.sh
ddpm/utils/: dataset_status.py  log.py  seed_everything.py
docker/: Dockerfile
docs/: REPORT.md  TODO.md  reproducibility.md  roadmap.md  v3_multispectral_lit.md
docs/site/: README.md  mkdocs.yml
legacy/: README.md  REPRODUCE.md  evaluate_model.py  lunch_training.sh  lunch_training_sr.sh  requirements_dgx.txt  run_evaluation.sh  run_joint.sh  run_smoke.sh  run_sr.sh  run_training_local.sh  run_training_mac.sh  sample_grid.sh
legacy/DDPM/: Imagen_text_joint_pytorch.py  Imagen_text_pytorch.py  Imagen_text_sr_pytorch.py  sample_grid.py
legacy/utils/: stats.json
method/: index.html
results/: README.md  clip_result.json  fid_cfg_step89050.tsv  fid_curve_lr.tsv  fid_curve_sr.tsv  fid_result.json  fid_result_f768.json  final_test_captions.txt  index.html
scripts/: build_rsicd_csv.py  fid_sweep.sh  make_plots.py  merge_base.py  remote_snapshot.sh  sr_after_postsweep.sh  sr_after_postsweep_pull.sh  sr_auto_after_ep1000.sh  sr_auto_after_uploads.sh  sr_cfg_sweep.sh  sr_clip_score.sh  sr_fid_sweep.sh  sr_final_1093.sh  sr_post_sweep.sh  sr_post_sweep_pull.sh  strip_checkpoint.py  train.sh  vast_run.sh  vast_setup.sh
scripts/cloud/: remote_snapshot.sh  sr_after_postsweep.sh  (+7 more)
search/: search_index.json
stylesheets/: extra.css
tests/: test_smoke.py
usage/: index.html
(+21 files in other folders)
