[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsdiff"
version = "0.0.1"
description = "Open-source diffusion models for remote sensing imagery."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Ahmad Sebaq", email = "ahmad.sebaq@gmail.com" }]
keywords = ["diffusion", "remote-sensing", "satellite", "generative-models", "earth-observation"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4",
    "torchvision>=0.19",
    "diffusers>=0.31",
    "transformers>=4.44",
    "accelerate>=0.34",
    "datasets>=2.21",
    "huggingface-hub>=0.25",
    "safetensors>=0.4",
    "einops>=0.8",
    "Pillow>=10.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "omegaconf>=2.3",
    "tensorboard>=2.17",
    "torchmetrics[image]>=1.4",
]

[project.optional-dependencies]
eval = [
    "open-clip-torch>=2.26",
    "clean-fid>=0.1.35",
    "scikit-learn>=1.5",
]
geo = [
    "rasterio>=1.3",
    "pystac-client>=0.8",
    "stackstac>=0.5",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10",
]

[project.scripts]
rsdiff = "rsdiff.cli:main"

[project.urls]
Homepage = "https://github.com/asebaq/rsdiff"
Issues = "https://github.com/asebaq/rsdiff/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
